# newgenerator

./: .env  DEPLOYMENT_CHECKLIST.md  FILES_CHANGED.md  LICENSE  Makefile  README.md  SECURITY_UPGRADE_2026.md  UPGRADE_SUMMARY.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/routers/: analyze.py  generate.py  phishlets.py  validate.py
backend/app/schemas/: analysis.py  common.py  phishlet.py  saved.py
backend/app/services/: ai_service.py  analyzer.py  generator.py  scraper.py  validator.py
backend/app/templates/: base_phishlet.yaml
backend/data/phishlets/: 0bd7d65c-96be-48d6-8c1b-e94e992615ba.json
docs/: lesson-01-using-rtlphishletgenerator.md  lesson-02-creating-phishlets-manual.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisProgress.tsx  AnalysisReview.tsx  Layout.tsx  PhishletCard.tsx  PhishletEditor.tsx  URLInput.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/pages/: Generator.tsx  Home.tsx  Library.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
